# qnnx

./: .gitignore  CMakeLists.txt  README.md  check-python-dependency  convert_to_qnn.sh  requirements.txt  run.sh  run_qnnx.sh  setup_environment.sh
conversion/python/unet/: convert.py  test.py
include/QNN/: QnnBackend.h  QnnCommon.h  QnnContext.h  QnnGlobalConfig.h  QnnGraph.h  QnnInterface.h  QnnLog.h  QnnMem.h  QnnOpDef.h  QnnOpPackage.h  QnnProfile.h  QnnSdkBuildId.h  QnnSignal.h  QnnTypes.h
include/QNN/DSP/: QnnDspGraph.h  QnnDspPerfInfrastructure.h
include/QNN/DSP/Udo/: UdoFlatten.h  UdoImplDsp.h  UdoShared.h
include/QNN/GPU/: QnnGpuOpPackage.h
include/QNN/HTP/: QnnHtpCommon.h  QnnHtpDevice.h  QnnHtpGraph.h  QnnHtpPerfInfrastructure.h  QnnHtpProfile.h  QnnHtpSystemContext.h
include/QNN/HTP/core/: afuncs.h  allocator.h  bake_defs.h  build_options_pub.h  cc_pp.h  const_extent_descriptor.h  const_extent_shared.h  constraints.h  crate.h  ctor_hook.h  deserializer.h  dtype.h  dtype_enum.h  executable.h  flags.h  forward_classes.h  log.h  (+39 more)
include/QNN/HTPQEMU/: QnnHtpQemuCommon.h
include/QNN/IR/: QnnIrCommon.h  QnnIrGraph.h
include/QNN/LPAI/: QnnLpaiDevice.h  QnnLpaiGraphPrepare.h  QnnLpaiMem.h
include/QNN/System/: QnnSystemContext.h  QnnSystemDlc.h  QnnSystemLog.h  QnnSystemProfile.h
include/QNN/TFLiteDelegate/: QnnTFLiteDelegate.h
model_zoo/python/fcn/: convert.py  test.py
model_zoo/python/unet/: convert_to_raw.py
python/fcn/: visualize_qnn.py
qnnx/: CMakeLists.txt  main.cpp
qnnx/include/: CommandLineParser.h  Commons.h  File.h  Loader.h  Log.h  Model.h  QNNCommons.h  QnnxLog.h  Tensor.h  Types.h
qnnx/src/: CommandLineParser.cpp  File.cpp  Loader.cpp  Model.cpp  QnnxLog.cpp  Tensor.cpp
sample_app/: CMakeLists.txt  QnnSampleApp.cpp  QnnSampleApp.hpp  QnnTypeMacros.hpp  SampleApp.hpp  main.cpp
sample_app/DspLog/: LogUtils.cpp
sample_app/Log/: LogUtils.cpp  Logger.cpp  Logger.hpp
sample_app/PAL/include/PAL/: Dsp.hpp  DynamicLoading.hpp  FileOp.hpp  GetOpt.hpp
sample_app/PAL/src/common/: GetOpt.cpp  StringOp.cpp
sample_app/PAL/src/linux/: Directory.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
sample_app/PAL/src/windows/: Common.cpp  Directory.cpp  Dsp.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
sample_app/Utils/: BuildId.hpp  DataUtil.cpp  DataUtil.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp  QnnDlcUtils.cpp  QnnDlcUtils.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
sample_app/WrapperUtils/: QnnWrapperUtils.cpp  QnnWrapperUtils.hpp
(+1 files in other folders)
